fermenter/src/web/snapshots/fermenter__web__handlers__tests__brew_form_with_current_brew_snapshot.snap
---
source: src/web/handlers.rs
expression: html.0
---
<!DOCTYPE html>
<html lang="en">
<head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Fermenter — Brew Identifier</title>
    <link rel="stylesheet" href="/static/styles.css">
    <script src="https://unpkg.com/htmx.org@2"></script>
</head>
<body>
    <header>
        <h1>Fermenter</h1>
        <p class="version">dev</p>
    </header>
    <main>
        
<h2>Brew Identifier</h2>



<form method="post" action="/brew">
    <label for="brew_id">Brew identifier</label>
    <input type="text" id="brew_id" name="brew_id" value="00-TEST-v00">
    <button type="submit">Update</button>
</form>
<form method="get" action="/"><button type="submit">Cancel</button></form>

    </main>
</body>
</html>
