fermenter/src/web/snapshots/fermenter__web__handlers__tests__chart_fragment_with_history_snapshot.snap
---
source: src/web/handlers.rs
expression: html.0
---
<svg width="800" height="480" viewBox="0 0 800 480" xmlns="http://www.w3.org/2000/svg">
<rect x="0" y="0" width="800" height="480" opacity="1" fill="#FFFFFF" stroke="none"/>
<text x="400" y="21" dy="0.76em" text-anchor="middle" font-family="sans-serif" font-size="19.35483870967742" opacity="1" fill="#000000">
Temperature history
</text>
<line opacity="1" stroke="#DCE0E6" stroke-width="1" x1="78" y1="411" x2="78" y2="46"/>
<line opacity="1" stroke="#DCE0E6" stroke-width="1" x1="125" y1="411" x2="125" y2="46"/>
<line opacity="1" stroke="#DCE0E6" stroke-width="1" x1="172" y1="411" x2="172" y2="46"/>
<line opacity="1" stroke="#DCE0E6" stroke-width="1" x1="219" y1="411" x2="219" y2="46"/>
<line opacity="1" stroke="#DCE0E6" stroke-width="1" x1="266" y1="411" x2="266" y2="46"/>
<line opacity="1" stroke="#DCE0E6" stroke-width="1" x1="313" y1="411" x2="313" y2="46"/>
<line opacity="1" stroke="#DCE0E6" stroke-width="1" x1="360" y1="411" x2="360" y2="46"/>
<line opacity="1" stroke="#DCE0E6" stroke-width="1" x1="407" y1="411" x2="407" y2="46"/>
<line opacity="1" stroke="#DCE0E6" stroke-width="1" x1="454" y1="411" x2="454" y2="46"/>
<line opacity="1" stroke="#DCE0E6" stroke-width="1" x1="501" y1="411" x2="501" y2="46"/>
<line opacity="1" stroke="#DCE0E6" stroke-width="1" x1="548" y1="411" x2="548" y2="46"/>
<line opacity="1" stroke="#DCE0E6" stroke-width="1" x1="595" y1="411" x2="595" y2="46"/>
<line opacity="1" stroke="#DCE0E6" stroke-width="1" x1="642" y1="411" x2="642" y2="46"/>
<line opacity="1" stroke="#DCE0E6" stroke-width="1" x1="689" y1="411" x2="689" y2="46"/>
<line opacity="1" stroke="#DCE0E6" stroke-width="1" x1="736" y1="411" x2="736" y2="46"/>
<line opacity="1" stroke="#DCE0E6" stroke-width="1" x1="783" y1="411" x2="783" y2="46"/>
<line opacity="1" stroke="#DCE0E6" stroke-width="1" x1="78" y1="395" x2="783" y2="395"/>
<line opacity="1" stroke="#DCE0E6" stroke-width="1" x1="78" y1="368" x2="783" y2="368"/>
<line opacity="1" stroke="#DCE0E6" stroke-width="1" x1="78" y1="342" x2="783" y2="342"/>
<line opacity="1" stroke="#DCE0E6" stroke-width="1" x1="78" y1="315" x2="783" y2="315"/>
<line opacity="1" stroke="#DCE0E6" stroke-width="1" x1="78" y1="289" x2="783" y2="289"/>
<line opacity="1" stroke="#DCE0E6" stroke-width="1" x1="78" y1="262" x2="783" y2="262"/>
<line opacity="1" stroke="#DCE0E6" stroke-width="1" x1="78" y1="236" x2="783" y2="236"/>
<line opacity="1" stroke="#DCE0E6" stroke-width="1" x1="78" y1="209" x2="783" y2="209"/>
<line opacity="1" stroke="#DCE0E6" stroke-width="1" x1="78" y1="183" x2="783" y2="183"/>
<line opacity="1" stroke="#DCE0E6" stroke-width="1" x1="78" y1="156" x2="783" y2="156"/>
<line opacity="1" stroke="#DCE0E6" stroke-width="1" x1="78" y1="129" x2="783" y2="129"/>
<line opacity="1" stroke="#DCE0E6" stroke-width="1" x1="78" y1="103" x2="783" y2="103"/>
<line opacity="1" stroke="#DCE0E6" stroke-width="1" x1="78" y1="76" x2="783" y2="76"/>
<line opacity="1" stroke="#DCE0E6" stroke-width="1" x1="78" y1="50" x2="783" y2="50"/>
<text x="16" y="229" dy="0.76em" text-anchor="middle" font-family="sans-serif" font-size="9.67741935483871" opacity="1" fill="#000000" transform="rotate(270, 16, 229)">
Temperature
</text>
<text x="431" y="464" dy="-0.5ex" text-anchor="middle" font-family="sans-serif" font-size="9.67741935483871" opacity="1" fill="#000000">
Time
</text>
<line opacity="0.2" stroke="#000000" stroke-width="1" x1="78" y1="411" x2="78" y2="46"/>
<line opacity="0.2" stroke="#000000" stroke-width="1" x1="313" y1="411" x2="313" y2="46"/>
<line opacity="0.2" stroke="#000000" stroke-width="1" x1="548" y1="411" x2="548" y2="46"/>
<line opacity="0.2" stroke="#000000" stroke-width="1" x1="783" y1="411" x2="783" y2="46"/>
<line opacity="0.2" stroke="#000000" stroke-width="1" x1="78" y1="395" x2="783" y2="395"/>
<line opacity="0.2" stroke="#000000" stroke-width="1" x1="78" y1="262" x2="783" y2="262"/>
<line opacity="0.2" stroke="#000000" stroke-width="1" x1="78" y1="129" x2="783" y2="129"/>
<polyline fill="none" opacity="0.7" stroke="#000000" stroke-width="1" points="77,46 77,411 "/>
<text x="68" y="395" dy="0.5ex" text-anchor="end" font-family="sans-serif" font-size="9.67741935483871" opacity="1" fill="#000000">
18.0
</text>
<polyline fill="none" opacity="0.7" stroke="#000000" stroke-width="1" points="72,395 77,395 "/>
<text x="68" y="262" dy="0.5ex" text-anchor="end" font-family="sans-serif" font-size="9.67741935483871" opacity="1" fill="#000000">
19.0
</text>
<polyline fill="none" opacity="0.7" stroke="#000000" stroke-width="1" points="72,262 77,262 "/>
<text x="68" y="129" dy="0.5ex" text-anchor="end" font-family="sans-serif" font-size="9.67741935483871" opacity="1" fill="#000000">
20.0
</text>
<polyline fill="none" opacity="0.7" stroke="#000000" stroke-width="1" points="72,129 77,129 "/>
<polyline fill="none" opacity="0.7" stroke="#000000" stroke-width="1" points="78,412 783,412 "/>
<text x="78" y="422" dy="0.76em" text-anchor="middle" font-family="sans-serif" font-size="9.67741935483871" opacity="1" fill="#000000">
01 Jan 12:00
</text>
<polyline fill="none" opacity="0.7" stroke="#000000" stroke-width="1" points="78,412 78,417 "/>
<text x="313" y="422" dy="0.76em" text-anchor="middle" font-family="sans-serif" font-size="9.67741935483871" opacity="1" fill="#000000">
01 Jan 12:01
</text>
<polyline fill="none" opacity="0.7" stroke="#000000" stroke-width="1" points="313,412 313,417 "/>
<text x="548" y="422" dy="0.76em" text-anchor="middle" font-family="sans-serif" font-size="9.67741935483871" opacity="1" fill="#000000">
01 Jan 12:03
</text>
<polyline fill="none" opacity="0.7" stroke="#000000" stroke-width="1" points="548,412 548,417 "/>
<text x="783" y="422" dy="0.76em" text-anchor="middle" font-family="sans-serif" font-size="9.67741935483871" opacity="1" fill="#000000">
01 Jan 12:05
</text>
<polyline fill="none" opacity="0.7" stroke="#000000" stroke-width="1" points="783,412 783,417 "/>
<polyline fill="none" opacity="1" stroke="#0072B2" stroke-width="1" points="80,395 221,329 "/>
<polyline fill="none" opacity="1" stroke="#D55E00" stroke-width="1" points="80,129 221,63 "/>
<polyline fill="none" opacity="1" stroke="#009E73" stroke-width="1" points="80,262 221,262 "/>
<rect x="636" y="51" width="143" height="60" opacity="0.85" fill="#FFFFFF" stroke="none"/>
<rect x="636" y="51" width="143" height="60" opacity="1" fill="none" stroke="#000000"/>
<text x="676" y="61" dy="0.76em" text-anchor="start" font-family="sans-serif" font-size="9.67741935483871" opacity="1" fill="#000000">
Average fermenter
</text>
<text x="676" y="76" dy="0.76em" text-anchor="start" font-family="sans-serif" font-size="9.67741935483871" opacity="1" fill="#000000">
Ambient
</text>
<text x="676" y="91" dy="0.76em" text-anchor="start" font-family="sans-serif" font-size="9.67741935483871" opacity="1" fill="#000000">
Target
</text>
<polyline fill="none" opacity="1" stroke="#0072B2" stroke-width="1" points="646,66 666,66 "/>
<polyline fill="none" opacity="1" stroke="#D55E00" stroke-width="1" points="646,81 666,81 "/>
<polyline fill="none" opacity="1" stroke="#009E73" stroke-width="1" points="646,96 666,96 "/>
</svg>
