fermenter/src/web/snapshots/fermenter__web__handlers__tests__chart_fragment_without_history_snapshot.snap
---
source: src/web/handlers.rs
expression: html.0
---
<p class="no-history">No temperature history is available for this window.</p>
