fermenter/src/web/snapshots/fermenter__web__handlers__tests__status_fragment_without_reading_snapshot.snap
---
source: src/web/handlers.rs
expression: html.0
---
<div id="status" class="status">
    <p class="brew-id">Brew: <strong>00-TEST-v00</strong></p>
    
    <p class="no-data">No reading available yet.</p>
    
</div>
